<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/menu_history" />

    <item
        android:id="@+id/nav_add_portero"
        android:icon="@drawable/ic_baseline_person_add_24"
        android:title="@string/menu_add_portero" />

    <item
        android:id="@+id/nav_disabled_portero"
        android:icon="@drawable/ic_baseline_person_add_disabled_24"
        android:title="@string/menu_disabled_portero" />

    <item
        android:id="@+id/nav_change_password"
        android:icon="@drawable/ic_baseline_lock_reset_24"
        android:title="@string/menu_lock_reset" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/menu_logout"/>
</menu>

